- remove inconsistent team partner wish tuples and add test for it